[package]
name = "loserver"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Executable for loser"
repository = "https://github.com/lo48576/loser"
keywords = []
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/loser" }
